--- a/SOSU-Power-9000.Api/appsettings.json
+++ b/SOSU-Power-9000.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SOSU-Power-9000Db;Trusted_Connection=true;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
