--- a/SOSU-Power-9000.CareApp/SOSU-Power-9000.CareApp.csproj
+++ b/SOSU-Power-9000.CareApp/SOSU-Power-9000.CareApp.csproj
@@ -68,4 +68,10 @@
 	  <ProjectReference Include="..\SOSU-Power-9000.Services\SOSU-Power-9000.Services.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="UserPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
